// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`全宽模式 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 1rem;
  white-space: nowrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: 1px solid rgba(0,0,0,0.12);
}

.c4 {
  position: absolute;
  bottom: 0;
  left: 0;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  height: 2px;
  background-color: #3f51b5;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.35,0,0.25,1);
  -webkit-transition: transform 0.5s cubic-bezier(0.35,0,0.25,1);
  transition: transform 0.5s cubic-bezier(0.35,0,0.25,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
  overflow: -moz-scrollbars-none;
  overflow-x: scroll;
}

.c1::-webkit-scrollbar {
  display: none;
}

.c1.c1 {
  overflow: hidden;
}

.c1.c1 > .sinoui-tab {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 10px 8px;
  overflow: hidden;
  display: inline-block;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  height: 48px;
  padding: 0 24px;
  cursor: pointer;
  box-sizing: border-box;
  opacity: 0.6;
  text-align: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  white-space: nowrap;
  color: #3f51b5;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-letter-spacing: 1.25px;
  -moz-letter-spacing: 1.25px;
  -ms-letter-spacing: 1.25px;
  letter-spacing: 1.25px;
  font-weight: 500;
  position: relative;
  white-space: nowrap;
  -webkit-transition: opacity 0.25s cubic-bezier(0.4,0,0.2,1), color 0.25s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.25s cubic-bezier(0.4,0,0.2,1), color 0.25s cubic-bezier(0.4,0,0.2,1);
  -webkit-tap-highlight-color: transparent;
  opacity: 1;
}

.c2:hover {
  opacity: 1;
}

.c3 {
  height: 48px;
  padding: 0 24px;
  cursor: pointer;
  box-sizing: border-box;
  opacity: 0.6;
  text-align: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  white-space: nowrap;
  color: rgba(0,0,0,0.87);
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-letter-spacing: 1.25px;
  -moz-letter-spacing: 1.25px;
  -ms-letter-spacing: 1.25px;
  letter-spacing: 1.25px;
  font-weight: 500;
  position: relative;
  white-space: nowrap;
  -webkit-transition: opacity 0.25s cubic-bezier(0.4,0,0.2,1), color 0.25s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.25s cubic-bezier(0.4,0,0.2,1), color 0.25s cubic-bezier(0.4,0,0.2,1);
  -webkit-tap-highlight-color: transparent;
}

.c3:hover {
  opacity: 1;
}

<div
  className="c0 sinoui-tab-header"
  role="tablist"
>
  <div
    className="c1 sinoui-tab-list"
    onScroll={[Function]}
  >
    <div
      aria-selected={true}
      className="c2 sinoui-tab sinoui-tab--active"
      data-testid="tab-header-item-0"
      id="tab-2"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={0}
    >
      标签1
    </div>
    <div
      aria-selected={false}
      className="c3 sinoui-tab"
      data-testid="tab-header-item-1"
      id="tab-3"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      标签2
    </div>
    <div
      className="c4 sinoui-ink-bar"
      data-testid="inkbar"
    />
  </div>
</div>
`;

exports[`正确渲染TabHeader 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 1rem;
  white-space: nowrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: 1px solid rgba(0,0,0,0.12);
}

.c2 {
  position: absolute;
  bottom: 0;
  left: 0;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  height: 2px;
  background-color: #3f51b5;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.35,0,0.25,1);
  -webkit-transition: transform 0.5s cubic-bezier(0.35,0,0.25,1);
  transition: transform 0.5s cubic-bezier(0.35,0,0.25,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
  overflow: -moz-scrollbars-none;
  overflow-x: scroll;
}

.c1::-webkit-scrollbar {
  display: none;
}

<div
  className="c0 sinoui-tab-header"
  role="tablist"
>
  <div
    className="c1 sinoui-tab-list"
    onScroll={[Function]}
  >
    <div
      className="sinoui-tab-label"
    >
      标签内容1
    </div>
    <div
      className="sinoui-tab-label sinoui-tab-label-active"
    >
      标签内容2
    </div>
    <div
      className="c2 sinoui-ink-bar"
      data-testid="inkbar"
    />
  </div>
</div>
`;

exports[`附加内容 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 1rem;
  white-space: nowrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: 1px solid rgba(0,0,0,0.12);
}

.c2 {
  position: absolute;
  bottom: 0;
  left: 0;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,width 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  height: 2px;
  background-color: #3f51b5;
}

.c3 {
  line-height: 48px;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.35,0,0.25,1);
  -webkit-transition: transform 0.5s cubic-bezier(0.35,0,0.25,1);
  transition: transform 0.5s cubic-bezier(0.35,0,0.25,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
  overflow: -moz-scrollbars-none;
  overflow-x: scroll;
}

.c1::-webkit-scrollbar {
  display: none;
}

<div
  className="c0 sinoui-tab-header"
  role="tablist"
>
  <div
    className="c1 sinoui-tab-list"
    onScroll={[Function]}
  >
    <div
      className="sinoui-tab-label"
    >
      标签内容1
    </div>
    <div
      className="sinoui-tab-label sinoui-tab-label-active"
    >
      标签内容2
    </div>
    <div
      className="c2 sinoui-ink-bar"
      data-testid="inkbar"
    />
  </div>
  <div
    className="c3 sinoui-tab-header__extra-content"
  >
    <div>
      附加内容
    </div>
  </div>
</div>
`;
